fix stretched tabs overflow styles

--- a/packages/circuit-ui/components/Tabs/components/TabList/TabList.module.css
+++ b/packages/circuit-ui/components/Tabs/components/TabList/TabList.module.css
@@ -62,27 +62,33 @@
   width: 100%;
 }
 
-.stretched [role="tab"] {
-  flex: 1 1 auto;
-  width: var(--tab-list-width);
-  padding-right: var(--cui-spacings-kilo);
-  padding-left: var(--cui-spacings-kilo);
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 @media (max-width: 479px) {
   .stretched-mobile {
     width: 100%;
   }
 
   .stretched-mobile [role="tab"] {
-    flex: 1 1 auto;
+    display: inline;
     width: var(--tab-list-width);
     padding-right: var(--cui-spacings-kilo);
     padding-left: var(--cui-spacings-kilo);
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: center;
+    white-space: nowrap;
+  }
+}
+
+@media (min-width: 480px) {
+  .stretched [role="tab"] {
+    display: inline;
+    width: var(--tab-list-width);
+    padding-right: var(--cui-spacings-kilo);
+    padding-left: var(--cui-spacings-kilo);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+    white-space: nowrap;
   }
 }
 
